--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-title: Hacker theme
-description: Hacker is a theme for GitHub Pages.
+title: Rafael Santamaria - Cybersecurity Portfolio
+description: I am a Cybersecurity Automation Specialist and this page contains my projects. 
 show_downloads: true
 google_analytics:
 theme: jekyll-theme-hacker
