--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-title: Rafael_Santamaria_Cybersecurity_Portfolio
-description: Greetings! I am a Cybersecurity Automation Specialist and this page contains my projects, that you can paruse at your leisure.
+title: Cybersecurity_Portfolio
+description: Greetings! My name is Rafael Santamaría Ortega. I am a Cybersecurity Automation Specialist and this page contains my projects, that you can paruse at your leisure.
 show_downloads: true
 google_analytics:
 theme: jekyll-theme-hacker
