--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,6 @@
 title: Cybersecurity_Portfolio
-description: Greetings! My name is Rafael Santamaría Ortega. I am a Cybersecurity Automation Specialist and this page contains my projects, that you can paruse at your leisure.
+description: Greetings! My name is Rafael Santamaría Ortega. I am a Cybersecurity Automation Specialist and this page contains my projects, that you can paruse at your leisure. Link to my Linkedin:
+<a href="https://www.linkedin.com/in/rafael-santamaria-ortega">absolute file</a>
 show_downloads: false
 google_analytics:
 theme: jekyll-theme-hacker
