--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Cybersecurity_Portfolio
-description: Greetings! My name is Rafael Santamaría Ortega. I am a Cybersecurity Automation Specialist and this page contains my projects, that you can paruse at your leisure
+description: Greetings! My name is Rafael Santamaría Ortega, and I am a Cybersecurity Automation Specialist. This page contains the documentation and code of my projects. You can paruse it at your leisure!
 show_downloads: false
 google_analytics:
 theme: jekyll-theme-hacker
