--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Cybersecurity_Portfolio
-description: Greetings! My name is Rafael Santamaría Ortega, and I am I’m a Philosopher passionate about creating cybersecurity solutions using Python and Machine Learning, looking to apply my unique skill set as an Automation Specialist focused in cybersecurity to reduce risk and increase client protection through cutting-edge automated solutions. This page contains the documentation and code of my projects. You can paruse it at your leisure!
+description: Greetings! My name is Rafael Santamaría Ortega, and I am I’m a Philosopher passionate about creating cybersecurity solutions using Python and Machine Learning. This passion drives me to the field of cybersecurity, in which I seek to apply my unique skill set as an Automation Specialist to reduce risk and increase client protection through cutting-edge automated solutions, like the ones presented in this portfolio. You can peruse it at your leisure!
 show_downloads: false
 google_analytics:
 theme: jekyll-theme-hacker
