--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Cybersecurity_Portfolio
-description: Greetings! My name is Rafael Santamaría Ortega, I love coding automated cybersecurity solutions. This is my portfolio of practical projects.
+description: Greetings! My name is Rafael Santamaría Ortega, I'm a Cyber Defense Analyst with 13+ industry certifications, 20+ projects and a unique background in philosophy and communications. This is my portfolio of practical projects.
 show_downloads: false
 google_analytics:
 theme: jekyll-theme-hacker
