--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
 title: Cybersecurity_Portfolio
-description: Greetings! My name is Rafael Santamaría Ortega, I'm a Cyber Defense Analyst with 13+ industry certifications, 20+ projects and a unique background in philosophy and reputation defense analysis.
+description: Greetings! My name is Rafael Santamaría Ortega, I'm a Cyber Defense Analyst with 13+ industry certifications, 20+ projects and 3+ years of experience in reputation defense analysis.
 google_analytics:
 theme: jekyll-theme-hacker
