--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
 title: Cybersecurity_Portfolio
-description: Greetings! My name is Rafael Santamaría Ortega, I'm an aspiring AI Security Engineer commited to ensuring safe and human-centric AI.
+description: Greetings! My name is Rafael Santamaría Ortega, I'm an aspiring AI Security Engineer commited to ensuring safe and human-centered AI.
 google_analytics:
 theme: jekyll-theme-hacker
