Revise title and description in config file
Updated title and description for the portfolio.

--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: Cybersecurity_Portfolio
-description: Greetings! My name is Rafael Santamaría Ortega, I'm an aspiring AI Security Engineer commited to ensuring safe and human-centered AI.
+title: Portfolio
+description: Greetings! My name is Rafael Santamaría Ortega, I'm a philosopher and software developer apprentice.
 google_analytics:
 theme: jekyll-theme-hacker
